fixing overflow issue home

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,6 +4,7 @@
     width: 90%;
     margin: 0 auto;
     padding-bottom: 150px;
+    max-width: 1400px;
 }
 
 h1.page-title {
@@ -129,6 +130,7 @@ h3{
         /* margin-bottom: 150px; */
        text-align: center;
        margin: 0 auto;
+       
     }
 
     .summery p {
