--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -13,6 +13,7 @@
 .form-container  {
     /* background-color: rgba(255, 119, 119); */
     /* background-color: rgba(7, 19, 42,); */
+    max-width: 580px;
     width: 40%;
     /* background-color:white; */
     height: 600px;
